# spacy-huggingface-pipelines

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
spacy_huggingface_pipelines/: __init__.py  text_classification.py  token_classification.py
spacy_huggingface_pipelines/tests/: test_pipeline_components.py
spacy_transformers_pipeline/: __init__.py  pipeline_components.py  text_classification.py  token_classification.py
spacy_transformers_pipeline/tests/: test_pipeline_components.py
