[metadata]
version = 0.0.4
description = spaCy wrapper for Hugging Face Transformers pipelines
url = https://github.com/explosion/spacy-huggingface-pipelines
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Release notes = https://github.com/explosion/spacy-huggingface-pipelines/releases
    Source = https://github.com/explosion/spacy-huggingface-pipelines

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.8
install_requires =
    spacy>=3.0.0,<4.0.0
    transformers>=4.28.0,<5.0.0
    torch>=1.8.0

[options.entry_points]
spacy_factories =
    hf_text_pipe = spacy_huggingface_pipelines.text_classification:make_hf_text_pipe
    hf_token_pipe = spacy_huggingface_pipelines.token_classification:make_hf_token_pipe

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy
